[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/enemies/spider_queen/spider_queen.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/spider/player_detection.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/spider_queen/spider_queen.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 23.7128

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[node name="SpiderQueen" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 63
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
speed = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 1.01211, 1.00745 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 2 )

[node name="NavLine" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.376471 )
width = 8.0
[connection signal="body_entered" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_exited"]
[connection signal="chase" from="PlayerDetection" to="." method="_on_PlayerDetection_chase"]
[connection signal="stop_chase" from="PlayerDetection" to="." method="_on_PlayerDetection_stop_chase"]
